# SongFetch

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
audio_agent/: __init__.py  types.py
audio_agent/agents/: __init__.py
audio_agent/agents/search_query_builder/: __init__.py  agent.py  prompt.py  schema.py
audio_agent/providers/: __init__.py  ollama.py
audio_agent/tools/: __init__.py  _shared.py  download.py  search.py
src/: __init__.py  _utils.py  env.py  pipeline.py  types.py
src/agents/: __init__.py  _shared.py
src/agents/download_selector/: __init__.py  agent.py  prompt.py  schema.py
src/agents/metadata_request_builder/: __init__.py  agent.py  prompt.py  schema.py
src/agents/metadata_selector/: __init__.py  agent.py  prompt.py  schema.py
src/agents/search_query_builder/: __init__.py  agent.py  prompt.py
src/agents/youtube_fallback_metadata_builder/: agent.py  prompt.py  schema.py
src/providers/: __init__.py  itunes.py  lrclib.py  musicbrainz.py  ollama.py  spotify.py
src/tools/: __init__.py  _shared.py  download.py  lyrics.py  metadata.py  search.py  spotify.py  tagging.py
tests/: conftest.py  test_agents.py  test_main.py  test_metadata.py  test_tools.py
