[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-agent"
version = "0.1.0"
description = "Two yt-dlp helper functions for searching and downloading song audio"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp[default]",
]

[tool.setuptools.packages.find]
include = ["audio_agent*"]
