[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-agent"
version = "0.1.0"
description = "Agentic workflow for song search, metadata lookup, and audio download"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mutagen>=1.47",
    "ollama>=0.4.0",
    "pydantic>=2.0",
    "yt-dlp[default]",
]

[tool.setuptools.packages.find]
include = ["src*"]
